syntax = "proto3";

option go_package = "./proto";

// Empty message from the Google Protobuf package
import "google/protobuf/empty.proto";

service OrderService {
    rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse);
    rpc GetOrder(GetOrderRequest) returns (Order);
    rpc CreateOrder(CreateOrderRequest) returns (google.protobuf.Empty);
}

message GetOrdersRequest {
    int64 UserID = 1;
}

message GetOrderRequest {
    int64 UserID = 1;
    int64 OrderID = 2;
}

message Order {
    int64 order_id = 1;
    int64 product_id = 2;
    string customer_name = 3;
    string brand_name = 4;
    string category_name = 5;
    string color = 6;
    string size = 7;
    int64 quantity = 8;
    string description = 9;
    float revenue = 10;
    float cost = 11;
    float profit = 12;
    bool has_reviewed = 13;
    string created_at = 14;
}

message GetOrdersResponse {
    repeated Order orders = 1;
}

message CreateOrderRequest {
    int64 UserID = 1;
    string CustomerName = 2;
    string ProductName = 3;
    string BrandName = 4;
    string CategoryName = 5;
    string Color = 6;
    string Size = 7;
    int64 Quantity = 8;
    string Description = 9;
    int64 Revenue = 10;
    int64 Cost = 11;
    int64 Profit = 12;
    bool HasReviewed = 13;
}